--- a/models/sources/sources.yml
+++ b/models/sources/sources.yml
@@ -1,25 +1,39 @@
 version: 2
 
 sources:
+  - name: dev
+    database: analytics_workspace
+    description: >
+      This source is temporal because organizations do not have parent organizations yet.
+    schema: dataengineer_dev
+    tables:
+      - name: organizations_child
+        identifier: incode_organizations_demo
+        description: "Temporal until saas has the child organization"
+        columns:
+          - name: _id
+            description: "Is a json with organization id"
+          - name: parentorganizationid
+            description: "Raw parent id"
+
   - name: glue_demo
     database: glue_demo
     description: >
-      This data source comes from the glue_demo database.\n
+      This data source comes from the glue_saas database.
 
-      It originates from the analytics_workspace space.\n
+      It originates from the analytics_workspace space.
 
-      This source is updated daily at around every 15 mins.
-
+      This source is updated daily at xx.
     schema: public
     tables:
       - name: interviews
         identifier: interviews
-        description: "This table has millios of records because is one per each sesion, odo we only need the flow name"
+        description: "This table has millions of records because is one per each session, so we only need the flow name"
         columns:
           - name: apikey
-            description: "This is the common dentifier used"
+            description: "This is the common identifier used"
           - name: configurationname
-            description: "All most everyone is Onboarding but don't know why"
+            description: "Almost everyone is Onboarding but don't know why"
           - name: configurationid
             description: "For join with flows._id"
           - name: clientid
@@ -27,33 +41,35 @@ sources:
 
       - name: flows
         identifier: flows
-        description: "Here is the names of the needed permisions"
+        description: "Here is the names of the needed permissions"
         columns:
           - name: _id
             description: "The table primary key"
           - name: name
-            description: "All most everyone is Onboarding but don't know why"
+            description: "Almost everyone is Onboarding but don't know why"
           - name: apikey
-            description: "This is the common dentifier used"
+            description: "This is the common identifier used"
 
       - name: exec
         identifier: executives
-        description: "Is the table where all the executives are storaged"
+        description: "Is the table where all the executives are stored"
         columns:
           - name: apikey
-            description: "This is the common dentifier used, the Id is empty some times"
+            description: "This is the common identifier used, the Id is empty sometimes"
           - name: email
             description: "Executive email"
           - name: organizations_json
-            description: "One executive can have N organizations, when organization is there a json is storaged as an array of organizations IDs"
+            description: "One executive can have N organizations, when organization is there a json is stored as an array of organizations IDs"
           - name: type
-            description: "Is a inplace clasificaction, can be one of this 'ADMIN', 'MULTI_ORG_ADMIN', 'INCODE_EXECUTIVE', 'INTEGRATOR' or others"
+            description: "Is an in-place classification, can be one of this 'ADMIN', 'MULTI_ORG_ADMIN', 'INCODE_EXECUTIVE', 'INTEGRATOR' or others"
 
       - name: orgs
         identifier: organizations
-        description: "Is the table where all the organizations are storaged"
+        description: "Is the table where all the organizations are stored"
         columns:
+          - name: _id
+            description: "PK"
           - name: clientid
             description: "The id of the client on this organization"
           - name: apikey
-            description: "Is the API to conect on the system using external tools"
+            description: "Is the API to connect on the system using external tools"
